--- a/app/assets/stylesheets/project_style.css.scss
+++ b/app/assets/stylesheets/project_style.css.scss
@@ -286,7 +286,6 @@
 		min-height:4em;
 		padding-top:0;
 		padding:0;
-		@include transition(background-color, 0.1s, linear);
 
 		form {
 			padding-top: .375em;
@@ -294,7 +293,7 @@
 				margin-bottom: .375em;
 			}
 			label {
-				width: 20%;
+				width: 12em;
 				margin-top:1em;
 				border:1px solid $toolbarGrey;
 				padding: 1em 1em;
@@ -325,8 +324,7 @@
 	}
 
 	.task{
-		border-bottom: 1px solid $sidebarGrey;
-		background-color: $softWhite;
+
 		margin-left:0;
 		height: auto;
 		width:auto;
